<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menuItemAdicionar"
        android:icon="@android:drawable/ic_menu_add"
        android:title="@string/adicionar"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menuItemSobre"
        android:title="@string/sobre"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menuItemRegiao"
        android:title="@string/regiao_titulo" />
    <group
        android:id="@+id/groupModoOrdenacao"
        android:checkableBehavior="single">
        <item
            android:id="@+id/menuOrdenaASC"
            android:title="@string/ordernar_Nome_Missao_ASC" />
        <item
            android:id="@+id/menuOrdenaDESC"
            android:title="@string/ordernar_Nome_Missao_DESC" />
    </group>
</menu>